--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -3,7 +3,10 @@
 
 {% block page_content %}
     <!--Main Slider-->
-    <div class="rotating-slider studio-ver padding_top full-screen center-block header-opacity" id="home">
+    <div class="rotating-slider studio-ver padding_top full-screen center-block header-opacity"
+         style="background: url({% static '/images/2019_kaggledays_meetup/kaggledays_데뽀홈페이지랜딩용.png' %}) no-repeat;
+                background-size: cover;"
+         id="home">
        <div class="container">
           <div class="row padding_half">
              <div class="col-md-12">
@@ -75,7 +78,38 @@
     <!--people&activity section ends-->
 
 
-
+    <!--events section-->
+    <section id="events" class="half-section">
+       <div class="container-fluid">
+          <div class="row">
+             <div class="col-md-6 nopadding">
+                <div class="split-box text-center center-block container-padding equalheight">
+                   <div class="heading-title padding">
+                   <span style="font-family: 'Do Hyeon'">Kaggle Master와 함께하는</span>
+                   <h2 class="darkcolor bottom20 wow fadeIn" data-wow-delay="150ms">
+                       Kaggle Days Meetup Seoul #1</h2>
+                   <p class="heading_space wow fadeIn" data-wow-delay="250ms">
+                       한국에서 캐글의 보편화와 많은 캐글러들(Kagglers)이 생겨날 수 있는 발판을 마련하고자
+                      데이터뽀개기에서 캐글코리아와 함께 첫 번째 'Kaggle Days Meetup Seoul'을 주최합니다!
+                     <br/><br/>
+                        Kaggle Days는 폴란드에 본사를 둔 LogicAI에서 조직한 캐글 기반의 밋업&워크샵으로,
+                      전 세계 주요 도시에서 열리고 있으며 Kaggle에서 직접 후원을 받고 있습니다.</p>
+                   <a target="_blank" href="http://tinyurl.com/kaggledays-seoul"
+                      class="button btnprimary wow fadeInUp" data-wow-delay="300ms">
+                       Go event page</a>
+                </div>
+                </div>
+             </div>
+             <div class="col-md-6 nopadding">
+                <div class="image hover-effect img-container">
+                   <img alt="" src="{% static 'images/2019_kaggledays_meetup/kaggledays_홈페이지용.png' %}"
+                        class="equalheight">
+                </div>
+             </div>
+          </div>
+       </div>
+    </section>
+    <!--events section ends-->
 
 
     <!-- Counters -->
