index.html 파일에 공지사항 추가(#37)

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -2,6 +2,12 @@
 {% load staticfiles %}
 
 {% block page_content %}
+   <script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
+   <script src="{% static 'js/notify.js' %}"></script>
+   <script>
+       $.notify("스폰서십 가이드라인 메뉴가 추가되었습니다!", "info");
+   </script>
+
     <!--Main Slider-->
     <div class="rotating-slider studio-ver padding_top full-screen center-block header-opacity"
          style="background: url({% static '/images/2019_kaggledays_meetup/kaggledays_데뽀홈페이지랜딩용.png' %}) no-repeat;
