랜딩 페이지 이미지, 팝업 문구 변경(#41)

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -5,12 +5,12 @@
    <script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
    <script src="{% static 'js/notify.js' %}"></script>
    <script>
-       $.notify("스폰서십 가이드라인 메뉴가 추가되었습니다!", "info");
+       $.notify("5월 밋업 발표자 모집&추천이 오픈되었습니다!", "info");
    </script>
 
     <!--Main Slider-->
     <div class="rotating-slider studio-ver padding_top full-screen center-block header-opacity"
-         style="background: url({% static '/images/2019_kaggledays_meetup/kaggledays_데뽀홈페이지랜딩용.png' %}) no-repeat;
+         style="background: url({% static '/images/kagglebreak/landing_coffee3.jpg' %}) no-repeat;
                 background-size: cover;"
          id="home">
        <div class="container">
@@ -84,7 +84,7 @@
     <!--people&activity section ends-->
 
 
-    <!--events section-->
+    <!--events section
     <section id="events" class="half-section">
        <div class="container-fluid">
           <div class="row">
