페이지 제목과 썸네일이 자동으로 렌더링되도록 변경(#43) - 제목, 썸네일 위치 등을 저장할 수 있는 operation 모델 생성 - 이전에 고정으로 들어가 있던 제목, 썸네일이 저장된 데이터에 따라 자동으로 렌더링되도록 함

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -4,9 +4,11 @@
 <head>
 <!-- Required meta tags -->
 <meta charset="utf-8">
-<meta property="og:image" content="{% static 'images/meetup/meetup_thumbnail.jpg' %}">
+{% with page_info.value2 as thumbnail_image_static %}
+   <meta property="og:image" content="{% static thumbnail_image_static %}">
+{% endwith %}
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>DataBreak</title>
+<title>{{ page_info.value }}</title>
 <link href="{% static 'images/favicon_d.ico' %}" rel="icon">
 
 <!--Plugins css-->
