2019년 5월 밋업 배너 랜딩 페이지에 추가(#51) - 5월 밋업 이미지와 간단한 내용 홈페이지 랜딩에 추가 - 등록 url 연결

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -5,12 +5,12 @@
    <script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
    <script src="{% static 'js/notify.js' %}"></script>
    <script>
-       $.notify("5월 밋업 발표자 모집&추천이 오픈되었습니다!", "info");
+       $.notify("5월 밋업 참석 등록이 오픈되었습니다!", "info");
    </script>
 
     <!--Main Slider-->
     <div class="rotating-slider studio-ver padding_top full-screen center-block header-opacity"
-         style="background: url({% static '/images/kagglebreak/landing_coffee3.jpg' %}) no-repeat;
+         style="background: url({% static '/images/meetup/2019_05/homepage_landing.jpg' %}) no-repeat;
                 background-size: cover;"
          id="home">
        <div class="container">
@@ -84,31 +84,29 @@
     <!--people&activity section ends-->
 
 
-    <!--events section
+    <!--events section-->
     <section id="events" class="half-section">
        <div class="container-fluid">
           <div class="row">
              <div class="col-md-6 nopadding">
                 <div class="split-box text-center center-block container-padding equalheight">
                    <div class="heading-title padding">
-                   <span style="font-family: 'Do Hyeon'">Kaggle Master와 함께하는</span>
+                   <span style="font-family: 'Do Hyeon'">데이터와 함께하는 슬기로운 금융생활</span>
                    <h2 class="darkcolor bottom20 wow fadeIn" data-wow-delay="150ms">
-                       Kaggle Days Meetup Seoul #1</h2>
+                       Data playground@7: 2nd</h2>
                    <p class="heading_space wow fadeIn" data-wow-delay="250ms">
-                       한국에서 캐글의 보편화와 많은 캐글러들(Kagglers)이 생겨날 수 있는 발판을 마련하고자
-                      데이터뽀개기에서 캐글코리아와 함께 첫 번째 'Kaggle Days Meetup Seoul'을 주최합니다!
-                     <br/><br/>
-                        Kaggle Days는 폴란드에 본사를 둔 LogicAI에서 조직한 캐글 기반의 밋업&워크샵으로,
-                      전 세계 주요 도시에서 열리고 있으며 Kaggle에서 직접 후원을 받고 있습니다.</p>
-                   <a target="_blank" href="http://tinyurl.com/kaggledays-seoul"
+                       5월 밋업 주제는 “데이터와 함께하는 슬기로운 금융생활” 입니다.
+                      뱅크샐러드와 함께 데이터를 통한 금융 생활과 자산 관리에 대한 자유로운 이야기를 공유하는 자리입니다.
+                     <br/><br/></p>
+                   <a target="_blank" href="https://festa.io/events/294"
                       class="button btnprimary wow fadeInUp" data-wow-delay="300ms">
-                       Go event page</a>
+                       Go to event page</a>
                 </div>
                 </div>
              </div>
              <div class="col-md-6 nopadding">
                 <div class="image hover-effect img-container">
-                   <img alt="" src="{% static 'images/2019_kaggledays_meetup/kaggledays_홈페이지용.png' %}"
+                   <img alt="" src="{% static 'images/meetup/2019_05/homepage_banner.png' %}"
                         class="equalheight">
                 </div>
              </div>
