index 페이지 마이너 수정, meetup detail 페이지 fadeinup 속도 변경(#54)

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -4,13 +4,13 @@
 {% block page_content %}
    <script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
    <script src="{% static 'js/notify.js' %}"></script>
-   <script>
-       $.notify("5월 밋업 참석 등록이 오픈되었습니다!", "info");
-   </script>
+   <!--<script>
+       $.notify("5월 밋업 티켓이 매진되었습니다. 신청 감사드립니다!", "info");
+   </script>-->
 
     <!--Main Slider-->
     <div class="rotating-slider studio-ver padding_top full-screen center-block header-opacity"
-         style="background: url({% static '/images/meetup/2019_05/homepage_landing.jpg' %}) no-repeat;
+         style="background: url({% static '/images/kagglebreak/landing_coffee3.jpg' %}) no-repeat;
                 background-size: cover;"
          id="home">
        <div class="container">
@@ -84,7 +84,7 @@
     <!--people&activity section ends-->
 
 
-    <!--events section-->
+    <!--events section
     <section id="events" class="half-section">
        <div class="container-fluid">
           <div class="row">
@@ -149,7 +149,7 @@
                          <i class="fa fa-desktop"></i>
                       </div>
                       <div class="counters">
-                         <span class="count_nums" data-to="3088" data-speed="2500"> </span> <i class="fa fa-plus"></i>
+                         <span class="count_nums" data-to="4112" data-speed="2500"> </span> <i class="fa fa-plus"></i>
                       </div>
                       <p class="title">페이스북 그룹 멤버 수</p>
                    </div>
